Fix frontend bug. Implement rest of endpoints. Add price info
